# flux-capacitor

./: Makefile.am  README.md  configure.ac  index.html
doc/: doxygen_src.cfg
examples/: Makefile.am  plan.lp
src/: Makefile.am
src/common/: AwkInputStream.cc  AwkInputStream.h  ErrorDefs.h  Makefile.am  awkInputStream.cc  awkInputStream.h  ctimer.c  ctimer.h  getdelim.c  getdelim.h  getline.c  getline.h  mem_alloc_utils.cc  mem_alloc_utils.h  options.cc  options.h
src/fba/: Makefile.am  solve_lp_probl.cc  solve_lp_probl_pars.h
utils/: Makefile.am  affy_to_eset.R  analyze_fba_results.sh  auto_fba.sh  auto_fva.sh  calc_matrix_rank.R  correct_pvalues.py  create_cplex_file.py  create_cplex_file.sh  create_lp_file.py  exec_panp_eset.R  extract_info_from_escher_json.py  extract_sbml_mod_info.py  extract_sbml_model_info.R  fba.py  fba.pylib  fcap_adv_sched_lib.sh  fcap_simple_sched_lib.sh  filter_panp_results.sh  filter_stoich_mat_reacs.py  gather_sample_fluxes.py  gen_fba_stats.sh  get_absent_present_genes.R  get_absent_present_genes.py  get_absent_present_genes_marray.py  get_absent_present_genes_rnaseq.py  get_cplex_fluxes.sh  get_entrezid_for_eset_genes.R  get_entrezid_for_probesets.R  get_jetset_scores.R  get_probeset_greatest_jscore.sh  instantiate_fva_templ.sh  network_reducer.sh  obtain_accessible_reacs.py  plot_fba_network.py  plot_kde_rnaseq.py  plot_metab_network.py  plot_metatool_network.py  show_data_for_column.py  shuffle.sh  (+4 more)
